--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
 .form-fields {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-top: 20px;
     margin-bottom: 20px;
-    width: 10vw;
+    width: 15vw;
+    gap: 24px;
+}
+
+.container {
+  padding: 16px;
+  width: 30%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input {
+  background-color: #2A004F;
+  padding: 16px;
+  width: 100%;
+  border: 0;
+  border-radius: 24px;
+  color: #E930FF;
+}
+
+input::placeholder {
+  color: #E930FF;
+  font-weight: bold;
+}
+
+h1 {
+  color: #fff;
+  font-weight: 900;
+  font-size: 4rem;
 }
 
 .App {
-  padding-left: 36px;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgb(59,0,60);
+  background: linear-gradient(162deg, rgba(59,0,60,1) 0%, rgba(143,14,146,1) 54%, rgba(207,127,208,1) 84%);
 }
 
 button {
-  width: 50%;
+  width: 60%;
+  border-radius: 24px;
+  color: #fff;
+  font-weight: 700;
+  background-color: #2A004F;
+  padding: 8px;
+  border: 0;
+  cursor: pointer;
+}
+
+label {
+  font-size: 1.5rem;
+  color: #fff;
+  font-weight: 600;
 }
